Fixed link spacing for contact page

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -131,7 +131,7 @@
       margin: 10px 35px auto;
       flex-direction: row;
       justify-content: space-between;
-      margin-bottom: 3vw;
+      margin-top: 10vw;
       font-size: 11px;
     }
     h5 {
